# django-iubenda

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml  pr-rebase-on-push.yaml  upgrade-dependency.yaml
community/contributing/: index.html
community/references/: index.html
community/status_code/: index.html
community/third-party-packages/: index.html
docs/: index.md
docs/community/: contributing.md  references.md
docs/tutorial/: configuration.md  customize.md  example.md  google-gtm.md  http-api.md  images.md  templates.md
requirements/: docs.txt  py310-dev.txt  py310-django32.txt  py310-django42.txt  py310-django52.txt  py311-dev.txt  py311-django32.txt  py311-django42.txt  py311-django52.txt  py312-django32.txt  py312-django42.txt  py312-django52.txt  py313-django52.txt  py314-django52.txt  py38-dev.txt  py38-django32.txt  py38-django42.txt  py39-django32.txt  py39-django42.txt  requirements.in  runtime.in
search/: search_index.json
src/iubenda/: __init__.py  admin.py  api.py  apps.py  conf.py  context_processors.py  defaults.py  models.py  sitemaps.py  translation.py  urls.py  views.py
src/iubenda/fixtures/: data.json
src/iubenda/locale/it/LC_MESSAGES/: django.po
src/iubenda/migrations/: 0001_initial.py
src/iubenda/static/iubenda/css/: iubenda_badge.css
src/iubenda/templates/iubenda/: cookie-compress.html  cookie.html  include-content.html  privacy-compress.html  privacy.html
tests/: settings.py  test_iubenda.py  test_iubenda_api.py  test_iubenda_custom_options.py  test_iubenda_default_options.py  test_iubenda_settings.py  test_iubenda_template.py  test_iubenda_urls.py  urls.py  views.py
tests/fixtures/: data.json
tests/templates/: base.html
tutorial/configuration/: index.html
tutorial/customize/: index.html
tutorial/example/: index.html
tutorial/google-gtm/: index.html
tutorial/http-api/: index.html
tutorial/images/: index.html
tutorial/templates/: index.html
